--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <title>Wave</title>
   </head>
-  <body>
+  <body style="background-color: black">
     <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="wave-app"></div>
   </body>
